@@ -78,7 +78,7 @@ Module  javascript  _tcl  _man  _null
 Module  jpeg        _tcl  _man  _null
 Module  json        _tcl  _man  _null
 Module  ldap        _tcl  _man _exa
-Module  log          _msg _man  _exa
+Module  log          _msg _man  {_exax logger}
 Module  map         _tcl  _man  _null
 Module  mapproj     _tcl  _man _exa
 Module  math         _tci _man _exa
